--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "memory-cache": "^0.2.0",
     "rss-parser": "^3.7.0"
   }
 }
